# Program_Learning

./: .env.example  .gitignore  README.md  REPRODUCIBILITY.md  main.py  pyproject.toml
benchmarks/: README.md  __init__.py  candidate_count_sweep.py  common.py  graph_relabel_invariance_benchmark.py  iteration_count_sweep.py  main_paper_benchmark.py  no_hint_recovery_benchmark.py  pace2025_dominating_set.py  problem_size_sweep.py  sample_size_sweep.py  second_scale_benchmark.py  second_scale_benchmark_v2.py  second_scale_v2_profile.json
dasbench/: __init__.py  cli.py  diagnostics.py  suites.py  timing.py  utils.py
dasbench/agents/: __init__.py  candidate.py  llm.py  progress.py  template.py  template_runtime.py
dasbench/artifacts/: __init__.py  paths.py
dasbench/data/: __init__.py  dataset.py  spec.py
dasbench/problems/: mds.py  (+11 more)
scripts/: __init__.py  collect_experiment_results.py  export_baseline_catalog.py  export_problem_size_runtimes.py  pace2025_collect_heuristic_report.py  pace2025_run_heuristic_baselines.py  plot_iteration_best_runtime_so_far.py  plot_iteration_runtime_ratio_vs_zero_shot.py  plot_problem_size_solver_transfer.py
tests/: test_agent_prompt_sanitization.py  test_benchmark_sweeps.py  test_candidate_analysis_timeout.py  test_candidate_width.py  test_cli_benchmark_scope.py  test_dataset_generation.py  test_eval_outcomes.py  test_external_exact_baselines.py  test_gurobi_baseline.py  test_gurobi_cli_integration.py  test_hypothesis_schema.py  test_pace2025_dominating_set.py  test_problem_scoring.py  test_strong_baselines.py  test_template_smoke.py
(+52 files in other folders)
